syntax = "proto3";

package sfc_identity;

option csharp_namespace = "GrpcIdentityService";

message CreatePlayerRequest {
  int64 player_id = 1;
}
