syntax = "proto3";

package sfc_identity;

option csharp_namespace = "GrpcIdentityService";

message CreatePlayerResponse {
  bool success = 1;
}
