syntax = "proto3";

package sfc_identity;

option csharp_namespace = "GrpcIdentityService";

import "Protos/Messages/CreatePlayer/create_player_request.proto";
import "Protos/Messages/CreatePlayer/create_player_response.proto";

service IdentityService{
    rpc CreatePlayer(CreatePlayerRequest) returns (CreatePlayerResponse);
}